--- a/configmap/cm.yaml
+++ b/configmap/cm.yaml
@@ -21,7 +21,7 @@ items:
     EXT_ENDPOINT: https://harbor.cloud.prd.asiainfo.com
     GODEBUG: netdns=cgo
     IMAGE_STORE_PATH: /
-    JOBSERVICE_URL: http://harbor-harbor-jobservice
+    JOBSERVICE_URL: http://harbor-harbor-jobservice-blockchain-x5-vostok.tos.alfaintra.net
     LDAP_BASE_DN: ""
     LDAP_FILTER: (objectClass=person)
     LDAP_SCOPE: "2"
@@ -38,16 +38,16 @@ items:
     MYSQL_USR: root
     PROJECT_CREATION_RESTRICTION: everyone
     REGISTRY_STORAGE_PROVIDER_NAME: filesystem
-    REGISTRY_URL: http://harbor-harbor-registry:5000
+    REGISTRY_URL: http://harbor-harbor-registry-blockchain-x5-vostok.tos.alfaintra.net
     RESET: "false"
     SELF_REGISTRATION: "on"
     TOKEN_EXPIRATION: "30"
-    TOKEN_SERVICE_URL: http://harbor-harbor-ui/service/token
+    TOKEN_SERVICE_URL: http://harbor-harbor-ui-blockchain-x5-vostok.tos.alfaintra.net/service/service/token
     UAA_CLIENTID: ""
     UAA_CLIENTSECRET: ""
     UAA_ENDPOINT: ""
     UAA_VERIFY_CERT: "True"
-    UI_URL: http://harbor-harbor-ui
+    UI_URL: http://harbor-harbor-ui-blockchain-x5-vostok.tos.alfaintra.net
     VERIFY_REMOTE_CERT: "off"
     WITH_CLAIR: "true"
     WITH_NOTARY: "false"
@@ -87,7 +87,7 @@ items:
           attempts: 3
           renotifyinterval: 2h
           http:
-            endpoint: "http://harbor-harbor-ui/service/notifications/clair"
+            endpoint: "http://harbor-harbor-ui-blockchain-x5-vostok.tos.alfaintra.net/service/notifications/service/notifications/clair"
   kind: ConfigMap
   metadata:
     creationTimestamp: null
@@ -150,7 +150,7 @@ items:
         endpoints:
           - name: harbor
             disabled: false
-            url: http://harbor-harbor-ui/service/notifications
+            url: http://harbor-harbor-ui-blockchain-x5-vostok.tos.alfaintra.net/service/notifications
             timeout: 3000ms
             threshold: 5
             backoff: 1s
