--- a/statefulset/statefulset.yaml
+++ b/statefulset/statefulset.yaml
@@ -49,7 +49,13 @@ items:
           ports:
           - containerPort: 8080
             protocol: TCP
-          resources: {}
+          resources:
+            limits:
+              cpu: '200m'
+              memory: 1Gi
+            requests:
+              cpu: '100m'
+              memory: 256Mi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
@@ -113,7 +119,13 @@ items:
           image: vmware/harbor-db:v1.4.0
           imagePullPolicy: IfNotPresent
           name: mysql
-          resources: {}
+          resources:
+            limits:
+              cpu: '200m'
+              memory: 1Gi
+            requests:
+              cpu: '100m'
+              memory: 256Mi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
@@ -158,9 +170,12 @@ items:
           release: harbor
       spec:
         containers:
-        - args:
+        - name: registry
+          args:
           - serve
           - /etc/registry/config.yml
+          command:
+          - registry
           env:
           - name: REGISTRY_HTTP_SECRET
             valueFrom:
@@ -169,13 +184,19 @@ items:
                 name: harbor-harbor-registry
           image: vmware/registry-photon:v2.6.2-v1.4.0
           imagePullPolicy: IfNotPresent
-          name: registry
+
           ports:
           - containerPort: 5000
             protocol: TCP
           - containerPort: 5001
             protocol: TCP
-          resources: {}
+          resources:
+            limits:
+              cpu: '200m'
+              memory: 1Gi
+            requests:
+              cpu: '100m'
+              memory: 256Mi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
