--- a/configmap/cm.yaml
+++ b/configmap/cm.yaml
@@ -18,10 +18,10 @@ items:
     EMAIL_PORT: "25"
     EMAIL_SSL: "false"
     EMAIL_USR: sample_admin@mydomain.com
-    EXT_ENDPOINT: https://harbor.cloud.prd.asiainfo.com
+    EXT_ENDPOINT: http://harbor-blockchain-x5-vostok.tos.alfaintra.net
     GODEBUG: netdns=cgo
     IMAGE_STORE_PATH: /
-    JOBSERVICE_URL: http://harbor-harbor-jobservice-blockchain-x5-vostok.tos.alfaintra.net
+    JOBSERVICE_URL: http://harbor-harbor-jobservice
     LDAP_BASE_DN: ""
     LDAP_FILTER: (objectClass=person)
     LDAP_SCOPE: "2"
@@ -42,12 +42,12 @@ items:
     RESET: "false"
     SELF_REGISTRATION: "on"
     TOKEN_EXPIRATION: "30"
-    TOKEN_SERVICE_URL: http://harbor-harbor-ui-blockchain-x5-vostok.tos.alfaintra.net/service/service/token
+    TOKEN_SERVICE_URL: http://harbor-blockchain-x5-vostok.tos.alfaintra.net/service/service/token
     UAA_CLIENTID: ""
     UAA_CLIENTSECRET: ""
     UAA_ENDPOINT: ""
     UAA_VERIFY_CERT: "True"
-    UI_URL: http://harbor-harbor-ui-blockchain-x5-vostok.tos.alfaintra.net
+    UI_URL: http://harbor-blockchain-x5-vostok.tos.alfaintra.net
     VERIFY_REMOTE_CERT: "off"
     WITH_CLAIR: "true"
     WITH_NOTARY: "false"
@@ -87,7 +87,7 @@ items:
           attempts: 3
           renotifyinterval: 2h
           http:
-            endpoint: "http://harbor-harbor-ui-blockchain-x5-vostok.tos.alfaintra.net/service/notifications/service/notifications/clair"
+            endpoint: "http://harbor-blockchain-x5-vostok.tos.alfaintra.net/service/notifications/service/notifications/clair"
   kind: ConfigMap
   metadata:
     creationTimestamp: null
@@ -142,7 +142,7 @@ items:
       auth:
         token:
           issuer: harbor-token-issuer
-          realm: "https://harbor.cloud.prd.asiainfo.com/service/token"
+          realm: "http://harbor-blockchain-x5-vostok.tos.alfaintra.net/service/token"
           rootcertbundle: /etc/registry/root.crt
           service: harbor-registry
 
@@ -150,7 +150,7 @@ items:
         endpoints:
           - name: harbor
             disabled: false
-            url: http://harbor-harbor-ui-blockchain-x5-vostok.tos.alfaintra.net/service/notifications
+            url: http://harbor-blockchain-x5-vostok.tos.alfaintra.net/service/notifications
             timeout: 3000ms
             threshold: 5
             backoff: 1s
