--- a/deploy/deploy.yaml
+++ b/deploy/deploy.yaml
@@ -120,7 +120,7 @@ items:
           - name: GODEBUG
             value: netdns=cgo
           - name: ADMINSERVER_URL
-            value: http://harbor-harbor-adminserver-blockchain-x5-vostok.tos.alfaintra.net
+            value: http://harbor-harbor-adminserver
           envFrom:
           - secretRef:
               name: harbor-harbor-jobservice
@@ -222,7 +222,7 @@ items:
           - name: ENABLE_HARBOR_SCAN_ON_PUSH
             value: "1"
           - name: ADMINSERVER_URL
-            value: http://harbor-harbor-adminserver-blockchain-x5-vostok.tos.alfaintra.net
+            value: http://harbor-harbor-adminserver
           - name: CLAIR_DB_HOST
             value: harbor-harbor-clair-pg
           image: vmware/harbor-ui:v1.4.0
@@ -373,14 +373,14 @@ items:
           volumeMounts:
           - mountPath: /var/lib/postgresql/data/pgdata
             name: data
-            subPath: postgresql-db
         dnsPolicy: ClusterFirst
         restartPolicy: Always
         schedulerName: default-scheduler
         securityContext: {}
         terminationGracePeriodSeconds: 30
         volumes:
-        - emptyDir: {}
-          name: data
+        - name: data
+          persistentVolumeClaim:
+            claimName: harbor-registry-postgres-pv-claim
 kind: List
 metadata: {}
